--- a/frontend/static/templates/index.html
+++ b/frontend/static/templates/index.html
@@ -7,7 +7,7 @@
   {{block "css" . }}
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>RoyalUI Admin</title>
+  <title>Portworx</title>
   <!-- plugins:css -->
   <link rel="stylesheet" href="/frontend/static/templates/vendors/ti-icons/css/themify-icons.css">
   <link rel="stylesheet" href="/frontend/static/templates/vendors/base/vendor.bundle.base.css">
@@ -256,7 +256,7 @@
                   <div class="row">
                     <div class="col-md-12 col-xl-3 d-flex flex-column justify-content-center">
                       <div class="ml-xl-4">
-                        <h1>33500</h1>
+                        <h1>volume information</h1>
                         <h3 class="font-weight-light mb-xl-4">Volume report</h3>
                         <p class="text-muted mb-2 mb-xl-0">The total number of sessions within the date range. It is the period time a user is actively engaged with your website, page or app, etc</p>
                       </div>  
