--- a/frontend/static/templates/index.html
+++ b/frontend/static/templates/index.html
@@ -20,6 +20,8 @@
   <link rel="shortcut icon" href="/frontend/static/templates/images/favicon.png" />
   {{end}}
 
+  {{$volume := index .JsonVolumeInspect }}
+
 </head>
 <body>
   <div class="container-scroller">
@@ -256,9 +258,11 @@
                   <div class="row">
                     <div class="col-md-12 col-xl-3 d-flex flex-column justify-content-center">
                       <div class="ml-xl-4">
-                        <h1>volume information</h1>
-                        <h3 class="font-weight-light mb-xl-4">Volume report</h3>
-                        <p class="text-muted mb-2 mb-xl-0">The total number of sessions within the date range. It is the period time a user is actively engaged with your website, page or app, etc</p>
+                        <h5 class="font-weight-light mb-xl-4">Volume Name</h5>
+                        <h6 class="font-weight-light mb-xl-3">{{printf "%s" $.JsonVolumeInspect.VolumeInspect.Locator.Name  }}</h5>
+                        <h5 class="font-weight-light mb-xl-4">Volume ID</h5>
+                        <h6 class="font-weight-light mb-xl-3">{{printf "%s" $.JsonVolumeInspect.VolumeInspect.ID  }}</h5>
+                        <p class="text-muted mb-2 mb-xl-0">This is the information of your Portworx volume.</p>
                       </div>  
                     </div>
                     <div class="col-md-12 col-xl-9">
@@ -271,56 +275,10 @@
                           <div class="table-responsive mb-3 mb-md-0">
                             <table class="table table-borderless report-table">
                               <tr>
-                                <td class="text-muted">Illinois</td>
-                                <td class="w-100 px-0">
-                                  <h5 class="font-weight-bold mb-0">Volume Information</h5>
+                                <td class="font-weight-bold mb-0 w-50 px-0">Number of Replicas</td>
+                                <td class="w-50 px-0">
+                                  <h5 class="font-weight-normal mb-0">{{printf "%d" $.JsonVolumeInspect.VolumeInspect.Spec.HaLevel }}</h5>
                                 </td>
-                                <td><h5 class="font-weight-bold mb-0">524</h5></td>
-                              </tr>
-                              <tr>
-                                <td class="text-muted">Washington</td>
-                                <td class="w-100 px-0">
-                                  <div class="progress progress-md mx-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                </td>
-                                <td><h5 class="font-weight-bold mb-0">722</h5></td>
-                              </tr>
-                              <tr>
-                                <td class="text-muted">Mississippi</td>
-                                <td class="w-100 px-0">
-                                  <div class="progress progress-md mx-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                </td>
-                                <td><h5 class="font-weight-bold mb-0">173</h5></td>
-                              </tr>
-                              <tr>
-                                <td class="text-muted">California</td>
-                                <td class="w-100 px-0">
-                                  <div class="progress progress-md mx-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                </td>
-                                <td><h5 class="font-weight-bold mb-0">945</h5></td>
-                              </tr>
-                              <tr>
-                                <td class="text-muted">Maryland</td>
-                                <td class="w-100 px-0">
-                                  <div class="progress progress-md mx-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                </td>
-                                <td><h5 class="font-weight-bold mb-0">553</h5></td>
-                              </tr>
-                              <tr>
-                                <td class="text-muted">Alaska</td>
-                                <td class="w-100 px-0">
-                                  <div class="progress progress-md mx-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                </td>
-                                <td><h5 class="font-weight-bold mb-0">912</h5></td>
                               </tr>
                             </table>
                           </div>
