--- a/frontend/static/templates/index.html
+++ b/frontend/static/templates/index.html
@@ -46,8 +46,8 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo me-5" href="index.html"><img src="/frontend/static/templates/images/logo.svg" class="me-2" alt="logo"/></a>
-        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="/frontend/static/templates/images/logo-mini.svg" alt="logo"/></a>
+        <a class="navbar-brand brand-logo me-6" href="index.html"><img src="/frontend/static/templates/images/portworx-logo.svg" class="me-5" alt="logo"/></a>
+        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="/frontend/static/templates/images/portworx-mini.svg" alt="logo"/></a>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
         <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -333,8 +333,8 @@
         <!-- partial:partials/_footer.html -->
         <footer class="footer">
           <div class="d-sm-flex justify-content-center justify-content-sm-between">
-            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © <a href="https://www.bootstrapdash.com/" target="_blank">bootstrapdash.com </a>2021</span>
-            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Only the best <a href="https://www.bootstrapdash.com/" target="_blank"> Bootstrap dashboard </a> templates</span>
+            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © <a href="https://www.purestorage.com" target="_blank">Pure Storage Inc. </a>2022</span>
+            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Portworx by Pure Storage <a href="https://portworx.com" target="_blank"> Check our products </a> here </span>
           </div>
         </footer>
         <!-- partial -->
