--- a/frontend/static/templates/storage-pools.html
+++ b/frontend/static/templates/storage-pools.html
@@ -222,7 +222,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="storage-pools">
+            <a class="nav-link" href="">
               <i class="ti-harddrives menu-icon"></i>
               <span class="menu-title">Storage Pools</span>
             </a>
