--- a/frontend/static/templates/volumes.html
+++ b/frontend/static/templates/volumes.html
@@ -198,8 +198,8 @@
             </a>
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
+                <li class="nav-item"> <a class="nav-link" href="./pages/ui-features/buttons.html">Buttons</a></li>
+                <li class="nav-item"> <a class="nav-link" href="./pages/ui-features/typography.html">Typography</a></li>
               </ul>
             </div>
           </li>
@@ -210,7 +210,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="volumes">
+            <a class="nav-link" href="">
               <i class="ti-pie-chart menu-icon"></i>
               <span class="menu-title">Volumes</span>
             </a>
