--- a/frontend/static/templates/nodes.html
+++ b/frontend/static/templates/nodes.html
@@ -21,6 +21,7 @@
   {{end}}
 
   {{$nodes := .JsonListOfNodes }}
+  {{$usage := .JsonUsageVolume }}
 
 </head>
 <body>
@@ -276,7 +277,7 @@
                           </td>
                           <td>
                             <div class="progress">
-                              <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                              <div class="progress-bar bg-success" role="progressbar" style="width: 75%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                           </td>
                         </tr>
@@ -319,6 +320,7 @@
     var total = "{{$usageGolang.TotalSize}}";
 
   </script>
+
   <!-- plugins:js -->
   <script src="/frontend/static/templates/vendors/base/vendor.bundle.base.js"></script>
 
